--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,47 +1,35 @@
-@layer tailwind-base, primevue, tailwind-utilities;
+@import "./base.css";
 
-@layer tailwind-base {
-  @tailwind base;
+#app {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  font-weight: normal;
 }
 
-@layer tailwind-utilities {
-  @tailwind components;
-  @tailwind utilities;
+a,
+.green {
+  text-decoration: none;
+  color: hsla(160, 100%, 37%, 1);
+  transition: 0.4s;
+  padding: 3px;
 }
 
-::-webkit-scrollbar {
-  width: 3px;
-  height: 3px;
+@media (hover: hover) {
+  a:hover {
+    background-color: hsla(160, 100%, 37%, 0.2);
+  }
 }
 
-::-webkit-scrollbar-track {
-  border-radius: 100vh;
-  background: #151d23;
-}
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    place-items: center;
+  }
 
-::-webkit-scrollbar-thumb {
-  background: #dde1e4;
-  border-radius: 100vh;
-  border: 3px solid bg-base-neutral;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: #dde1e4;
-}
-
-.p-toast {
-  padding: 8px;
-  max-width: calc(100vw - 40px);
-}
-
-.p-accordion .p-accordion-header .p-accordion-header-link {
-  border: 0px;
-}
-
-.p-accordion .p-accordion-content {
-  border: 0px;
-}
-
-.p-accordion .p-accordion-tab {
-  margin-bottom: 12px;
+  #app {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 2rem;
+  }
 }
