--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,30 @@
-@import "./base.css";
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+.book-dialog {
+  font-family: 'Drunagor', sans-serif;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
+
+[class^="icon-"] {
+  display: inline-block;
+  width: 1.1em; /* Largura do ícone */
+  height: 1.1em; /* Altura do ícone */
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  vertical-align: middle; /* Alinha o ícone com o meio do texto */
+  margin: 0 0.1em; /* Pequeno espaçamento em volta */
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+/* Ícone Específico: 1 SPELL DMG */
+.icon-spell-dmg {
+  background-image: url('@/assets/fonts/1 SPELL DMG.svg');
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+/* Ícone Específico: 2 MELEE DMG */
+.icon-melee-dmg {
+  background-image: url('@/assets/fonts/2 MELEE DMG.svg');
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+/* Ícone Específico: 3 REACTION */
+.icon-reaction {
+  background-image: url('@/assets/fonts/3 REACTION.svg');
 }
